# py-minify-html

./: README.md  pyproject.toml
src/minifyhtml/: __init__.py
tests/: test_minify.py
